2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Timelines, Behaviours: Mention the 
	ClutterTimeline::completed signal, which you should handle when you want 
	to unref timelines and behaviours as soon as possible.

2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: ClutterAlpha _does_ have a a 
	floating reference.
	* examples/full_example/main.c: (add_to_ellipse_behaviour),
	(on_timeline_rotation_completed): Do not unref the ClutterAlpha because it has a 
	floating reference. 

2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/style.css: Make the header pink with black text, to be slightly 
	more like the default gtk-doc style.
	* docs/tutorial/clutter-tut.xml: Full Example: Added a description of what it does.
	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/: Added full_example.png.
	* examples/full_example/main.c: Make the background gray. Add a white rectangle under 
	the ellipse to give more sense of 3D. This is still rather ugly.

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/full_example/main.c: Gradualyl show a label with the filename 
	when showing the item. I could make this more attractive when we have 
	container actors again. 

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/behaviour/main.c: (main):
	* examples/effects/main.c: (main):
	* examples/timeline/main.c: (main): unref the timeline when the mainloop 
	stops.
	* examples/full_example/main.c: Avoid using even 360 degrees (not just >360) 
	to avoid an extra rotation of some items. Move and scale the clicked item 
	when the rotation stops.

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Contributing: 
	Correct the email address.
	Timelines: Mention behaviours and actors, while 
	still avoiding trying to explain them all in one 
	paragraph, because each chapter explains the advantage 